--- a/React/index.html
+++ b/React/index.html
@@ -8,11 +8,11 @@
     <script src="node_modules/babel-standalone/babel.js"></script>
 </head>
 <body>
-<div id="example"></div>
+<div id="wrapper"></div>
 <script type="text/babel">
     ReactDOM.render(
-            <h1>Hello, world!</h1>,
-            document.getElementById('example')
+        <h1>Hello, world!</h1>,
+        document.getElementById('wrapper')
     );
 </script>
 </body>
