--- a/React/index.html
+++ b/React/index.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <title>Hello MobX!</title>
-    <script src="node_modules/react/dist/react.js"></script>
-    <script src="node_modules/react-dom/dist/react-dom.js"></script>
-    <script src="node_modules/babel-standalone/babel.js"></script>
+    <title>MobX React Example</title>
 </head>
 <body>
-<div id="wrapper"></div>
-<script type="text/babel">
-    ReactDOM.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('wrapper')
-    );
-</script>
+    <div id="root"></div>
+    <script src="/static/bundle.js"></script>
 </body>
 </html>
